Fixed alignment of side menu links

--- a/resources/css/style_header.css
+++ b/resources/css/style_header.css
@@ -49,7 +49,7 @@ header{
     width: 100vw;
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 999;
     background: #FFFFFF;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
  }
@@ -162,11 +162,18 @@ header #nav_button:active{
     display: none;
     justify-content: center;
     align-items: center;
+    background-color: #FFF;
+
+}
+
+#menu_button:hover{
+    transform: scale(1.05);
     background-color: #F0F0F0;
 }
 
 #menu_button:active{
     transform: scale(0.95);
+    background-color: #F0F0F0;
 }
 
 .nav_menu{
@@ -199,18 +206,18 @@ header #nav_button:active{
     transition: 0.3s;
   }
   
-.side_menu .menu_item{
+.menu_items{
+    margin-left: 32px;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 18.25px;
-    min-height: 28px;
-    min-width: 78px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
 }
 
-.menu_item:last-of-type{
-    gap: 20.5px;
+.menu_items li{
+    padding-left: 18.25px;
 }
+
 
 .side_menu button{
     margin-top: 38.5px;
@@ -250,7 +257,7 @@ header #nav_button:active{
     transition: 0.2s;
   }
 
-  .side_menu a:hover {
+.side_menu a:hover {
     color: var(--sidebar_color);
     opacity: 0.8;
   }
@@ -258,6 +265,7 @@ header #nav_button:active{
   .side_menu a:active{
     color: var(--search_box_color);
   }
+
   .side_menu .closebtn {
     position: absolute;
     top: 33.5px;
